[JSC] Intl.NumberFormat ignores maximumFractionDigits with compact notation (both currency and decimal) https://bugs.webkit.org/show_bug.cgi?id=246646 rdar://101298045

Reviewed by Justin Michaud.

This patch aligns our hasFd / hasSd / needFd / needSd computation to the latest Intl.NumberFormat v3[1].
In particular, we strictly align our implementation to [2] function, and this change fixes compact notation's fd handling.

[1]: https://github.com/tc39/proposal-intl-numberformat-v3
[2]: https://tc39.es/proposal-intl-numberformat-v3/out/numberformat/diff.html#sec-setnfdigitoptions

* JSTests/stress/intl-numberformat-fd-handling-v2.js: Added.
(shouldBe):
(shouldBe.fmt.resolvedOptions):
* Source/JavaScriptCore/runtime/IntlNumberFormatInlines.h:
(JSC::setNumberFormatDigitOptions):

Canonical link: https://commits.webkit.org/255691@main